Fixes #1512: Create an Evaluator user role. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1986 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -64,6 +64,7 @@ Investigator = Investigator
 
 Clinical_Research_Coordinator = Clinical Research Coordinator
 study_coder = Study Coder
+study_evaluator = Evaluator
 
 MSK = MSK
 
