Fixes 1596: Incorrect validation for in min-max password length policies. Submitted by tom
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1988 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -431,3 +431,5 @@ please_provide_a_valid_url = Please provide a valid Bioontoloty URL.
 please_supply_the_biootology_api_key = Please supply the bioontology API key.
 unspecified_error_with_job_creation=There was an unspecified error with your creation, please contact an administrator.
 job_modification_error=Your modifications caused an error, please see the messages for more information.
+
+field_not_a_positive_integer = This is not a positive integer.
