--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -264,6 +264,8 @@ pwd_too_short = Password must be at least
 
 pwd_min_greater_than_max=The maximum password length must be greater than or equal the minimum length. 
 
+pwd_max_less_than_must_chars=The maximum password length must be greater than the total number of must-contain characters 
+
 pwd_cannot_reuse=The new password cannot be the same as the old password
 
 chars=characters.
