Fixes #1667: Incomplete usage of the <Include> tag to support metadata transfer. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2045 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -383,6 +383,8 @@ long_note5 = previous MetaDataVersion ODM ID, otherwise no include in you ODM ou
 
 long_note6 = include in your ODM output file.
 
+datasetConfirmIncludeDescriptorsDisabled = Note that leaving the MetaDataVersion ODM ID field empty will disable the CDISC ODM Include mechanism. That is, all of the sites will not get references to the MetaDataVersion descriptor of their parent study. This may affect exports in some formats, most notably SAS. Are you sure, you want to proceed?
+
 manage_all_discrepancy_notes_in = Manage All Discrepancy Notes In
 
 manage_all_event_definitions_in_study = Manage All Event Definitions in Study
