Fixes #1648: Redefine how error messages are being relayed from SAS export. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2060 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3296,6 +3296,14 @@ coded = Coded
 expand = Expand
 collapse = Collapse
 
+sas.errors=SAS errors:
+sas.warnings=SAS warnings:
+
+sas.success.warnings.email = The extract completed with warnings. The file is available for download $linkURL.
+sas.dataset.success.warnings = The extract completed with warnings, check your email for details. Please go to review it <a href='ExportDataset?datasetId=$datasetId'>here</a>.
+sas.failed.checkEmail = Your Extract failed, check your email for error details.
+sas.failed = Your extract failed.
+
 system = System
 clinCapture=ClinCapture
 
