--- a/core/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/audit_events.properties
@@ -170,7 +170,8 @@ __user_type = User Type
 __username = Username
 
 # Add terms below this line for ClinCapture-2.5
-__job_fired_success =The Job completed successfully. 
+__job_fired_success_warings =The Job completed with warnings, check your email for details.
+__job_fired_success =The Job completed successfully.
 __job_fired_fail =The Job failed to complete successfully.
 
 #audit log i18l
