Fixes #870: Generate annotated CRFs. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2062 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -278,6 +278,8 @@ and_send_password_to_user_via_email = and send password to user via email
 
 and_show_password_to_system_admin = and show password to system admin
 
+annotate_crf = Annotate CRF
+
 apply_dataset_filter = Apply Dataset Filter
 
 apply_filter = Apply Filter
