--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -502,7 +502,7 @@ proceed_to_create_a_dataset = Proceed to Create A Dataset
 
 proceed_to_create_filter = Proceed to Create Filter
 
-randomization_successful_message = Your randomization result and stratification variables were saved successfully. Click 'Save' to run rules for this CRF.
+randomization_successful_message = Your randomization result and randomization variables were saved successfully. Click 'Save' to run rules for this CRF.
 
 randomization_des_message = Subject can be randomized once during initial data entry.
 
