Refs #1639: User is able to set incorrect password policy, that will never allow them to enter a new password. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2074 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -264,7 +264,9 @@ pwd_too_short = Password must be at least
 
 pwd_min_greater_than_max=The maximum password length must be greater than or equal the minimum length. 
 
-pwd_max_less_than_must_chars=The maximum password length must be greater than the total number of must-contain characters 
+pwd_max_less_than_must_chars=The maximum password length must be greater than the total number of must-contain characters
+
+pwd_min_less_than_must_chars=The minimum password length must be greater than or equal to the total number of must-contain characters
 
 pwd_cannot_reuse=The new password cannot be the same as the old password
 
