Fixes #1516: Implement CRF Evaluation page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2099 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -849,3 +849,12 @@ you_are_completely_deleting_a_crf = You are COMPLETELY DELETING a CRF. This oper
 
 this_operation_will_permanently_delete_this_crf_version = This operation will PERMANENTLY delete this CRF Version and cannot be undone.
 you_are_completely_deleting_a_crf_version = You are COMPLETELY DELETING a CRF Version. This operation is permanent and cannot be undone.
+
+crf_evaluation_instruction=CRF evaluation allows a new user role "Evaluator" to only access the CRF(s) to be evaluated without being able to access any other data in a study. \
+  Just like a CRC, this role is allowed to edit/view/print the CRFs to be evaluated. <br/><br/> \
+  CRF Evaluation has 2 system-level properties: <br/> \
+  <p>1. Allow CRF Evaluation: Allows the Evaluator user role to appear when defining users or changing roles of study level users.</p> \
+  <p>2. Evaluate with Context: Displays additional information on the reading page, such as Subject ID and the Event Name.</p> <br/> \
+  The system-level properties can be overridden at the study level. <br/><br/> \
+  When a CRF is determined to be part of the CRF Evaluation page, a setting is turned on in the Edit Study Event Definition page. If the box "Evaluate CRF" is checked, the CRF appears in the CRF Evaluation page. <br/><br/> \
+  This work is carried out by a new Evaluator Role. This role can be defined at the Study or Site level. As a Study level role, the Evaluator has access to all sites under a study. As a site-level role, the Evaluator can only access CRFs to be evaluated in specific sites. The Evaluator does not see any other study data, including queries, unless they generate them themselves.
