--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3641,8 +3641,15 @@ systemProperty.evaluateWithContext.yes.radioLabel=Yes
 systemProperty.evaluateWithContext.no.radioLabel=No
 evaluated_crf=Evaluate CRF
 evaluate = Evaluate
+crf_evaluation=CRF Evaluation
 
 confirm_deletion_of_crf_version = Confirm Deletion of CRF Version
 this_crf_version_has_associated_data = This CRF Version has associated data that is preventing its deletion.
 this_crf_version_has_no_conflict_data = This CRF Version has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_version_has_been_removed = The CRF Version has been successfully removed
+
+crfEvaluationTable.crfName=CRF Name
+crfEvaluationTable.studySubjectId=Study Subject ID
+crfEvaluationTable.eventName=Event Name
+crfEvaluationTable.crfStatus=CRF Status
+crfEvaluationTable.actionColumn=Actions
