Fixes #1731: Evaluator GUI changes. Submitted by Sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2136 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -437,3 +437,5 @@ unspecified_error_with_job_creation=There was an unspecified error with your cre
 job_modification_error=Your modifications caused an error, please see the messages for more information.
 
 field_not_a_positive_integer = This is not a positive integer.
+
+no_permission_to_evaluate=No permission to open crf evaluation page
