--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -64,7 +64,7 @@ Investigator = Investigator
 
 Clinical_Research_Coordinator = Clinical Research Coordinator
 study_coder = Study Coder
-study_evaluator = Evaluator
+study_evaluator = Study Evaluator
 
 MSK = MSK
 
