Fixes #1535: Enrollment status per site. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2150 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -837,6 +837,7 @@ when_a_user_tried_to_login_with_this_account = when a user tried to login with t
 after_a_period_of_inactivity_of_more_than = after a period of inactivity of more than
 
 widget_error_message_cannot_load_widget = Cannot load widget because the corresponding widget file "{0}" does not exist in the widgets folder.
+widget_enrollment_per_site_hint = Percent of expected enrollment is shown on the right side of each site row.
 
 design_implement_coding =  This window allows you to perform medical coding on CRF items that have been defined to be coded, by clicking on the 'Code' icon. <p>Note that this is a list of items that have already been saved during data entry. You can review the CRF directly by clicking on the 'Open CRF' icon and if necessary send queries to the site.</p><p> If enabled, auto-coding can be performed on synonym terms already coded using a custom dictionary. Medical codes can be un-coded or permanently deleted from the custom dictionary.</p>
 drag_n_drop_instruction = Drag and drop reports to change your Home Page layout
