--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3256,14 +3256,15 @@ events_completion_widget_header = Event Status Details
 subject_status_count_widget_header = Subject Status Summary
 study_progress_widget_header = Events Status Summary
 sdv_progress_widget_header = Source Data Verification Progress
-nds_per_crf_widget_header = Notes and Discrepancies per CRF
+nds_per_crf_widget_header = Notes and Discrepancies Per CRF
 enrollment_progress_widget_header = Enrollment Progress
 coding_progress_widget_header = Coding Progress
+enrollment_status_ps_widget_header = Enrollment Status Per Site
 
 # widgets description
 sdv_widget_description = SDV Progress.
 nds_per_crf_widget_description = NDs per CRF.
-enrollment_progress_widget_description = Subjects Enrolled per Month.
+enrollment_progress_widget_description = Subjects Enrolled Per Month.
 coding_progress_widget_description = Coding progress.
 
 # toolbar header
