Fixes #1751: Suppress the Description change warning on CRF version updates. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2164 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -84,7 +84,7 @@ has_already_enrolled_site_study = \ has already been enrolled in another site of
 
 has_been_removed_succesfully = has been removed successfully.
 
-in_your_spreadsheet_already_exists = in your spreadsheet already exists for this CRF (as part of another version) and has a different DESCRIPTION(
+in_your_spreadsheet_already_exists = in your spreadsheet already exists for this CRF (as part of another version) and has a different DATA_TYPE (
 
 in_your_spreadsheet_already_exits_in_DB = in your spreadsheet already exists in the DB with different response options/text. You cannot code an existing response option with a different text, or code an existing response text with a different option. Please check it and upload your spreadsheet again.
 
@@ -304,7 +304,7 @@ the_user_could_not_be_edited_because_no_user_types = The user could not be edite
 
 there_was_an_error_sending_reset_email_try_reset = There was an error sending the reset-password email.  Please try to reset the password again.
 
-these_field_cannot_be_modified_because_not_owner = These fields cannot be modified because you are not the CRF owner, and if you continue, the PHI, UNITS, DESCRIPTION, and/or DATA_TYPE for this item will be ignored. If you do wish to keep your settings, please go back and rename the item to one that does not already exist in the CRF.
+these_field_cannot_be_modified_because_not_owner = These fields cannot be modified because you are not the CRF owner, and if you continue, UNITS and/or DATA_TYPE for the item(s) above will be ignored. If you do wish to keep your settings, please go back and rename the item(s).
 
 this_study_has_been_removed_succesfully = This study has been removed successfully.
 
@@ -338,7 +338,7 @@ values_must_from_valid = The values you specify must be from the valid response 
 
 was_updated_succesfully = was updated successfully.
 
-will_be_changed_if_you_continue = will be changed if you continue. If you think you made mistake, please go back and rename the item.
+if_you_think_you_made_mistake = If you think you made a mistake, please go back and rename the item(s).
 
 will_not_be_changed_if = will not be changed if the item has data already.
 
@@ -346,7 +346,7 @@ wrong_old_password = Wrong old password.
 
 you_are_trying_to = You are trying to
 
-you_may_not_modify_items = You may not modify the Description, Data Type, Units, or PHI Status of items already included in this CRF.
+you_may_not_modify_items = You should not modify the Data Types or Units of items already included in this CRF.
 
 you_may_not_perform_administrative_functions = You may not perform administrative functions
 
@@ -430,8 +430,8 @@ sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not
 sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
 sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not exist.
 
-please_remove_the_final_slash = Please remove the final slash in the Bioontoloty URL.
-please_provide_a_valid_url = Please provide a valid Bioontoloty URL.
+please_remove_the_final_slash = Please remove the final slash in the Bioontology URL.
+please_provide_a_valid_url = Please provide a valid Bioontology URL.
 please_supply_the_biootology_api_key = Please supply the bioontology API key.
 unspecified_error_with_job_creation=There was an unspecified error with your creation, please contact an administrator.
 job_modification_error=Your modifications caused an error, please see the messages for more information.
