CC-1766.patch commit
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2172 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3651,3 +3651,5 @@ crfEvaluationTable.studySubjectId=Study Subject ID
 crfEvaluationTable.eventName=Event Name
 crfEvaluationTable.crfStatus=CRF Status
 crfEvaluationTable.actionColumn=Actions
+
+search = Search
