Fixes #1727: Change Data Entry WF for Evaluation. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2189 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -352,6 +352,7 @@ begin_data_entry = Begin data entry
 
 begin_double_data_entry = Begin Double Data Entry
 
+begin_crf_evaluation = Begin Crf Evaluation
 
 begin_validation = Begin validation
 
@@ -839,33 +840,25 @@ does_not_contain_the_text = does not contain the text
 
 double_data_entry = Double Data Entry
 
-double_data_entry_for = Double Data Entry for
+evaluation = Evaluation
 
+double_data_entry_for = Double Data Entry for
 double_data_entry_start = Double Data Entry Started
 
 download = Download
-
 download_a_file = Download a File
 
-
 download_data = Download Data
-
 download_notes = Download notes
 
 download_notes_in_CSV = Download notes in CSV
-
 download_notes_in_PDF = Download notes in PDF
 
 download_spreadsheet = Download SpreadSheet
-
 duration = Duration
 
 dynamic_group_class = Dynamic Group Class
-
 dynamic_group_name = Dynamic Group Name
-
-#E-Signatures
-e_signature = E-Signatures
 
 edit = Edit
 
