--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3437,10 +3437,11 @@ systemProperty.randomizationEnviroment.label=Randomization Enviroment
 systemProperty.randomizationEnviroment.description=
 systemProperty.randomizationEnviroment.prod.radioLabel=Production
 systemProperty.randomizationEnviroment.test.radioLabel=Test
- systemProperty.exportFilePath.label=Export path
+systemProperty.exportFilePath.label=Export path
 systemProperty.exportFilePath.description=This parameter configures the path for the exported datasets.  A subfolder in the system repository will be created.<br/><br/> \
   If this parameter is specified, scheduled jobs will Submit extracted datasets in two places: this directory and in the system repository.  If this parameter is not specified, \
-  scheduled jobs will extract datasets only into the system repository.systemProperty.exportFilePath.measurements=(exports)
+  scheduled jobs will extract datasets only into the system repository.
+systemProperty.exportFilePath.measurements=(exports)
 systemProperty.extract.number.label=Extract number
 systemProperty.extract.number.description=Extract number defines how many subjects the system will paginate through while extracting data.  \
   This number can be increased to use higher amounts of memory and potentially decrease the amount of time extracts take.  You can lower this number if you have extremely large \  extracts to reduce the impact to online users while extracts are running.
@@ -3449,16 +3450,19 @@ systemProperty.sas.dir.description=This property defines the SAS folder that mus
   For example:<br/><br/> \  Windows: C:\\\\SAS<br/> \
   Linux:       /usr/local/sas
 systemProperty.sas.timer.label=SAS extract timeout
-systemProperty.sas.timer.description=This property specifies the maximum time allowed for the extract to complete.systemProperty.sas.timer.measurements=(hrs)
+systemProperty.sas.timer.description=This property specifies the maximum time allowed for the extract to complete.
+systemProperty.sas.timer.measurements=(hrs)
 
 systemProperty.mailHost.label=Host name
 systemProperty.mailHost.description=These Properties configure the email interface. SMTP and SMTPS protocols are supported. \  If the host requires a username and password make sure Authentication is set to true.  Minimum connection timeout is 5 seconds.
 systemProperty.mailPort.label=Port number
 systemProperty.mailPort.description=
-systemProperty.mailSmtpConnectionTimeout.label=Connection timeoutsystemProperty.mailSmtpConnectionTimeout.description=
+systemProperty.mailSmtpConnectionTimeout.label=Connection timeout
+systemProperty.mailSmtpConnectionTimeout.description=
 systemProperty.mailUsername.label=Username
 systemProperty.mailUsername.description=
-systemProperty.mailPassword.label=PasswordsystemProperty.mailPassword.description=
+systemProperty.mailPassword.label=Password
+systemProperty.mailPassword.description=
 systemProperty.mailProtocol.label=Protocol
 systemProperty.mailProtocol.description=
 systemProperty.mailProtocol.smtp.radioLabel=SMTP
