Fixes #1712: User should be able to specify format for auto generated Subject ID. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2197 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -4,6 +4,10 @@ CRF_name_used_by_another_CRF_choose_unique = CRF name has been used by another C
 
 CRF_name_used_choose_unique_name = CRF name has been used, please choose a unique name.
 
+auto_generated_subject_id_prefix_message = This field should contain only Digits or Characters.
+
+auto_generated_subject_id_separator_message = This Field should not contain Digits or Characters.
+
 all_values_must_from_specified = All of the values you choose must be from the specified response set.
 
 an_invalid_step_was_specified = An invalid step was specified while editing a user.
