--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -301,6 +301,8 @@ here = here
 
 how_generete_study_subject_ID = How to Generate the Study Subject ID?
 
+how_to_generate = How to Generate the Subject Person ID.
+
 if_created_CRF_using_excel = If you have already created a CRF using an Excel spreadsheet template, please enter the CRF name you specified in your spreadsheet in the 'CRF Name' field below to upload it to the system. The CRF Name in your Excel file must exactly match what you enter in the field below.
 
 if_specify_month_also_specify_year = If you specify a month, you must also specify the year.
