--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -181,6 +181,16 @@ YOB = YOB: YYYY
 
 Years = Years
 
+custom = Custom
+
+auto_generated_section_header = Generated Subject ID Format
+
+auto_generated_prefix = Prefix
+
+auto_generated_separator = Separator
+
+auto_generated_suffix = Digits
+
 about = About
 
 action = Action
