Fixes #1524: Create CRFs Evaluation Progress widget. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2201 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3263,12 +3263,14 @@ nds_per_crf_widget_header = Notes and Discrepancies Per CRF
 enrollment_progress_widget_header = Enrollment Progress
 coding_progress_widget_header = Coding Progress
 enrollment_status_ps_widget_header = Enrollment Status Per Site
+evaluation_progress_widget_header = CRFs Evaluation Progress
 
 # widgets description
 sdv_widget_description = SDV Progress.
 nds_per_crf_widget_description = NDs per CRF.
 enrollment_progress_widget_description = Subjects Enrolled Per Month.
 coding_progress_widget_description = Coding progress.
+evaluation_progress_widget_description = CRFs Evaluation Progress.
 
 # toolbar header
 available_widgets = Available Widgets
