Fixes #1812: Change "SAS dataset" by "SAS transport file" in the extract format options. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2203 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -428,9 +428,9 @@ error.systemProperty.logoFile.forbiddenExtention=You can upload logo files with 
 
 error.controllerErrorMsg=Sorry, an error has occurred. Try it again or contact your system administrator.
 
-sasDataset.exception.failed=Job: {0}. After {1} hour{2} the SAS dataset was not generated.
+sasDataset.exception.failed=Job: {0}. After {1} hour{2} the SAS transport file was not generated.
 sasDataset.exception.folder=The ''{0}'' folder was specified but it does not exist. The next fire time is: {1}
-sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not found. The next fire time is: {0}
+sasDataset.exception.zip=The ready.txt was found but the SAS transport zip file was not found. The next fire time is: {0}
 sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
 sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not exist.
 
