Fixes #1729: Evaluation page enhancements. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2207 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3656,3 +3656,6 @@ crfEvaluationTable.crfStatus=CRF Status
 crfEvaluationTable.actionColumn=Actions
 
 search = Search
+ready_for_evaluation = Ready for Evaluation
+evaluation_completed = Evaluation Completed
+evaluation_status = Evaluation Status
