Fixes #1728: Annotation generation when Evaluator amend the field. Submitted by hagafrank.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2221 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3654,6 +3654,8 @@ crfEvaluationTable.studySubjectId=Study Subject ID
 crfEvaluationTable.eventName=Event Name
 crfEvaluationTable.crfStatus=CRF Status
 crfEvaluationTable.actionColumn=Actions
+crf_eval_rfc_description=CRF Evaluation Data Change
+crf_eval_rfc_detailed_description=This note was automatically generated due to a field data change during CRF Evaluation.
 
 search = Search
 ready_for_evaluation = Ready for Evaluation
