Fixes #1820: Improve the event crf definition create/update blocks. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2248 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -848,6 +848,8 @@ does_not_contain_the_text = does not contain the text
 
 double_data_entry = Double Data Entry
 
+data_entry_quality = Data Entry Quality
+
 evaluation = Evaluation
 
 double_data_entry_for = Double Data Entry for
@@ -2801,6 +2803,7 @@ sdv_required_percent_complete = SDV Required % Complete
 select_all_on_page = Select All On The Page
 complete = complete
 send_email_on = Send Email on CRF
+send_email_when = Send Email when CRF is
 email_crf_to = Email To
 create_site_properties = Create Site Properties
 set_study_status =  Set Study Status
@@ -3643,6 +3646,7 @@ systemProperty.evaluateWithContext.no.radioLabel=No
 evaluated_crf=Evaluate CRF
 evaluate = Evaluate
 crf_evaluation=CRF Evaluation
+crf_data_evaluation = CRF Data Evaluation
 
 confirm_deletion_of_crf_version = Confirm Deletion of CRF Version
 this_crf_version_has_associated_data = This CRF Version has associated data that is preventing its deletion.
