Fixes #1789: Adding Subject, Ability to Manually Assign Dynamic Group, when using Dynamic Randomization Submitted by hagafrank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2249 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3088,6 +3088,8 @@ autoCreateSubjectDuringImport=Auto-create subject during import?
 
 allowSdvWithOpenQueries=Allow SDV With Open Queries?
 
+allowDynamicGroupsManagement = Allow Dynamic Groups Management?
+
 replaceExisitingDataDuringImport=Replace existing data during import?
 
 days_after_it_was_last_used = days after it was last used
