Fixes #1844: Remove all hardcoded messages from "Customize Home Page". Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2278 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1987,6 +1987,8 @@ set_user_role = Set User Role
 
 short_description = Short Description
 
+show = Show
+
 show_all = Show All
 
 show_all_datasets = Show All Datasets
