--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2807,6 +2807,9 @@ save_filter = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0444\u043
 #schedule =  Schedule
 #schedule = Запланировать
 schedule = \u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+#show = Show
+#show = Показать
+show = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C
 #start_data_entry =  Start Data Entry
 #start_data_entry = Начать ввод данных
 start_data_entry = \u041d\u0430\u0447\u0430\u0442\u044c \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445
