Fixes #1775: All pages with word "/pages/" in the URL are not translated. Submitted by hagafrank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2281 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2806,6 +2806,7 @@ send_email_on = Send Email on CRF
 email_crf_to = Email To
 create_site_properties = Create Site Properties
 set_study_status =  Set Study Status
+save_status = Save Status
 
 # Added for New Navigation Bar
 nav_change_study_site = Change Study/Site
@@ -3289,6 +3290,7 @@ defaultBioontologyURL = Bioontology URL
 dictionary=Dictionary
 mc_dictionaries=Medical Coding Dictionaries
 autoCodeDictionaryName=Auto-code Dictionary Name
+medical_terms = Medical Terms
 medicalCodingApprovalNeeded = Approval Needed?
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
 autoCode=Auto-Code
