--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4379,7 +4379,10 @@ create_site_properties = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0441\u0432
 #set_study_status =   Set Study Status
 #set_study_status = Определить статус исследования
 set_study_status = \u041e\u043f\u0440\u0435\u0434\u0435\u043b\u0438\u0442\u044c \u0441\u0442\u0430\u0442\u0443\u0441 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
-## Added for New Navigation Bar = 
+#save_status = Save Status
+#save_status = Сохранить статус
+save_status = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0441\u0442\u0430\u0442\u0443\u0441
+## Added for New Navigation Bar =
 ## Added for New Navigation Bar = 
 # Added for New Navigation Bar = 
 #nav_change_study_site =  Change Study/Site
@@ -5666,6 +5669,9 @@ mc_dictionaries = \u0421\u043b\u043e\u0432\u0430\u0440\u0438 \u043c\u0435\u0434\
 #autoCodeDictionaryName = Auto-code Dictionary Name
 #autoCodeDictionaryName = Название словаря автокодирования
 autoCodeDictionaryName = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0441\u043b\u043e\u0432\u0430\u0440\u044f \u0430\u0432\u0442\u043e\u043a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
+#medical_terms = Medical Terms
+#medical_terms = Медицинские Термины
+medical_terms = \u004d\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u0438\u0435 \u0422\u0435\u0440\u043c\u0438\u043d\u044b
 #medicalCodingApprovalNeeded =  Approval Needed?
 #medicalCodingApprovalNeeded = Нужно подтвеждение?
 medicalCodingApprovalNeeded = \u041d\u0443\u0436\u043d\u043e \u043f\u043e\u0434\u0442\u0432\u0435\u0436\u0434\u0435\u043d\u0438\u0435\u003f
