--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
@@ -9,7 +9,7 @@
 
 date_format = DD-MMM-YYYY
 
-date_format_calender = %d-%b-%Y
+date_format_calender = dd-M-yy
 
 #########################################
 # date_format_string
@@ -97,8 +97,6 @@ date_time_regexp = [0-9]{1,2}/[a-zA-Z]{3}/[0-9]{4} [0-9]{1,2}:[0-9]{1,2}
 # a new directory with all the language-specific files inside.
 ########################################
 image_dir = en
-
-jscalendar_language_file = calendar-en.js
 
 mid_date_format = MM/dd
 
