Fixes #1845: Update text for login button. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2289 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1350,6 +1350,8 @@ logical_connector = Logical Connector
 
 login = Login
 
+login_button = Login
+
 longest_run_time = Longest Run Time
 
 longitudinal = Longitudinal
