--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2015,6 +2015,9 @@ logical_connector  = \u041b\u043e\u0433\u0438\u0447\u0435\u0441\u043a\u0438\u043
 #login  =  Login
 #login  = Вход в систему
 login  = \u0412\u0445\u043e\u0434 \u0432 \u0441\u0438\u0441\u0442\u0435\u043c\u0443
+#login_button  =  Login
+#login_button  = Вход
+login_button  = \u0412\u0445\u043e\u0434
 #longest_run_time  =  Longest Run Time
 #longest_run_time  = Наибольшее время выполнения
 longest_run_time  = \u041d\u0430\u0438\u0431\u043e\u043b\u044c\u0448\u0435\u0435 \u0432\u0440\u0435\u043c\u044f \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u044f
