Fixes #1865: Evaluation progress widget is broken on ru locale. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2291 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5585,9 +5585,8 @@ completed_ = \u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 #customize_home_page =  Customize Home Page
 #customize_home_page = Настроить домашнюю страницу
 customize_home_page = \u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u0434\u043e\u043c\u0430\u0448\u043d\u044e\u044e \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443
-## widgets headers = 
-## widgets headers = 
-# widgets headers = 
+
+# widgets headers
 #nds_assigned_to_me_widget_header =  My Discrepancies
 #nds_assigned_to_me_widget_header = Мои замечания
 nds_assigned_to_me_widget_header = \u041c\u043e\u0438 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f
@@ -5612,9 +5611,10 @@ enrollment_progress_widget_header = \u0412\u043a\u043b\u044e\u0447\u0435\u043d\u
 #coding_progress_widget_header =  Coding Progress
 #coding_progress_widget_header = Кодирование
 coding_progress_widget_header = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435
-## widgets description = 
-## widgets description = 
-# widgets description = 
+#evaluation_progress_widget_header = CRFs Evaluation Progress
+#evaluation_progress_widget_header = Прогресс оценки ИРК
+evaluation_progress_widget_header = \u041F\u0440\u043E\u0433\u0440\u0435\u0441\u0441 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
+# widgets description
 #sdv_widget_description =  SDV Progress.
 #sdv_widget_description = SDV
 sdv_widget_description = SDV
@@ -6632,3 +6632,13 @@ crfEvaluationTable.crfStatus = \u0421\u0442\u0430\u0442\u0443\u0441 \u0418\u0420
 #crfEvaluationTable.actionColumn = Actions
 #crfEvaluationTable.actionColumn = Действия
 crfEvaluationTable.actionColumn = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+
+#ready_for_evaluation = Ready for Evaluation
+#ready_for_evaluation = Готовы к оценке
+ready_for_evaluation = \u0413\u043E\u0442\u043E\u0432\u044B \u043A \u043E\u0446\u0435\u043D\u043A\u0435
+#evaluation_completed = Evaluation Completed
+#evaluation_completed = Оценка завершена
+evaluation_completed = \u041E\u0446\u0435\u043D\u043A\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
+#evaluation_status = Evaluation Status
+#evaluation_status = Статус оценки
+evaluation_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u0446\u0435\u043D\u043A\u0438
