Fixes #1847: Layout of main menu is broken if length of messages not equals length of eng messages. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2297 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4437,8 +4437,8 @@ nav_view_events = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0441\u043e\
 #nav_source_data_verification = Сверка с первичными данными
 nav_source_data_verification = \u0421\u0432\u0435\u0440\u043a\u0430 \u0441 \u043f\u0435\u0440\u0432\u0438\u0447\u043d\u044b\u043c\u0438 \u0434\u0430\u043d\u043d\u044b\u043c\u0438
 #nav_study_audit_log =  Study Audit Log
-#nav_study_audit_log = Контрольный журнал исследования
-nav_study_audit_log = \u041a\u043e\u043d\u0442\u0440\u043e\u043b\u044c\u043d\u044b\u0439 \u0436\u0443\u0440\u043d\u0430\u043b \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
+#nav_study_audit_log = Аудит исследования
+nav_study_audit_log = \u0410\u0443\u0434\u0438\u0442 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
 #nav_extract_data =  Extract Data
 #nav_extract_data = Извлечь данные
 nav_extract_data = \u0418\u0437\u0432\u043b\u0435\u0447\u044c \u0434\u0430\u043d\u043d\u044b\u0435
